install_data(
  '_'.join(['hicolor', 'apps', 'scalable', photos_namespace + '.svg']),
  install_dir: join_paths(photos_datadir, 'icons', 'hicolor', 'scalable', 'apps'),
)

install_data(
  '_'.join(['hicolor', 'apps', 'symbolic', photos_namespace + '-symbolic.svg']),
  install_dir: join_paths(photos_datadir, 'icons', 'hicolor', 'symbolic', 'apps'),
)
