sources = files(
  'AbstractTiffDecoder.cpp',
  'AbstractTiffDecoder.h',
  'ArwDecoder.cpp',
  'ArwDecoder.h',
  'Cr2Decoder.cpp',
  'Cr2Decoder.h',
  'CrwDecoder.cpp',
  'CrwDecoder.h',
  'DcrDecoder.cpp',
  'DcrDecoder.h',
  'DcsDecoder.cpp',
  'DcsDecoder.h',
  'DngDecoder.cpp',
  'DngDecoder.h',
  'ErfDecoder.cpp',
  'ErfDecoder.h',
  'IiqDecoder.cpp',
  'IiqDecoder.h',
  'KdcDecoder.cpp',
  'KdcDecoder.h',
  'MefDecoder.cpp',
  'MefDecoder.h',
  'MosDecoder.cpp',
  'MosDecoder.h',
  'MrwDecoder.cpp',
  'MrwDecoder.h',
  'NakedDecoder.cpp',
  'NakedDecoder.h',
  'NefDecoder.cpp',
  'NefDecoder.h',
  'OrfDecoder.cpp',
  'OrfDecoder.h',
  'PefDecoder.cpp',
  'PefDecoder.h',
  'RafDecoder.cpp',
  'RafDecoder.h',
  'RawDecoder.cpp',
  'RawDecoder.h',
  'RawDecoderException.h',
  'Rw2Decoder.cpp',
  'Rw2Decoder.h',
  'SimpleTiffDecoder.cpp',
  'SimpleTiffDecoder.h',
  'SrwDecoder.cpp',
  'SrwDecoder.h',
  'ThreefrDecoder.cpp',
  'ThreefrDecoder.h',
)

librawspeed_decoders = static_library(
  'rawspeed-decoders',
  sources,
  include_directories: [rawspeed_include, rawspeed_external_include, rawspeed_librawspeed_include],
)
